--- a/ANT/build.xml
+++ b/ANT/build.xml
@@ -6,6 +6,7 @@
 	<property name="secrets.password" value="${env.ProvarSecretsPassword}"/>
 	<property name="testenvironment.secretspassword" value="${env.ProvarSecretsPassword_EnvName}"/>
 	
+	<property name="testcycle.path" value="../TestCycle"/>
 	
 	<taskdef name="Provar-Compile" classname="com.provar.testrunner.ant.CompileTask" classpath="${provar.home}/ant/ant-provar.jar"/>
 	<taskdef name="Run-Test-Case" classname="com.provar.testrunner.ant.RunnerTask" classpath="${provar.home}/ant/ant-provar.jar;${provar.home}/ant/ant-provar-bundled.jar;${provar.home}/ant/ant-provar-sf.jar"/>
@@ -32,11 +33,15 @@
 				stopTestRunOnError="false"
 				secretsPassword="${secrets.password}"
 				testEnvironmentSecretsPassword="${testenvironment.secretspassword}"
+	        	testCyclePath="${testcycle.path}"
+    	    	testCycleRunType="FAILURES"
 				invokeTestRunMonitor="true"
 				>
 		
-			<fileset id="testcases" dir="../tests"></fileset>
+			<fileset dir="../tests/ConsoleTesting"><include name="ConsoleTesting.testcase"/></fileset>
 
+			<emailProperties sendEmail="true" primaryRecipients="samarth.shekhar@provartesting.com" ccRecipients="" bccRecipients="" emailSubject="Provar test run report" attachExecutionReport="true" attachZip="true"/>
+			<attachmentProperties includeAllFailuresInSummary="true" includeBdd="true" includeSkipped="false" includeTestCasePathHierarchy="true" includeTestCaseShowSummary="false" includeBasicLogs="false" includeDetailLogs="false" includeDiagnosticTrace="true" includeTestStepTime="false" includeNoScreenshot="false" includeScreenshotThumbnail="false" includeFullScreenShot="true"/>
 		</Run-Test-Case>
 
 	</target>
